# blog-examples

./: .gitignore
dynamodb-python-type-hints/: README.md  requirements.txt
dynamodb-python-type-hints/news/: controllers.py  type_guards.py  types.py
dynamodb-python-type-hints/tests/: test_type_guards.py
human-readable-regular-expressions-python/: README.md  regex_patterns.py
integrate-django-vue/: README.md  manage.py  pyproject.toml
integrate-django-vue/django_vue/: settings.py  urls.py  views.py  wsgi.py
integrate-django-vue/frontend/: package.json  vue.config.js
lambda-python-performance/: app.py  pyproject.toml
lambda-python-performance/lambda_python_performance/: lambda_python_performance_stack.py
lambda-python-performance/src/functions/with_layer_mypyc/: query_star_trek_characters.py
lambda-python-performance/src/layer/: pyproject.toml
lambda-python-performance/tests/unit/: test_lambda_python_performance_stack.py
typescript-synchronize-drf-vue-part-2/: README.md  package.json  tsconfig.json
typescript-synchronize-drf-vue-part-2/src/: App.vue
unit-test-dynamodb-python-pytest-dynalite/: README.md  conftest.py  package.json
unit-test-dynamodb-python-pytest-dynalite/personification/: constants.py  dynamodb_queries.py
unit-test-dynamodb-python-pytest-dynalite/tests/: test_dynamodb_queries.py
unit-testing-async-celery-tasks/: Pipfile  README.md  setup.cfg  tasks.py  test_tasks.py
wagtail-django-admin/: .gitignore  Pipfile  README.md  manage.py  requirements.txt
wagtail-django-admin/home/: models.py  wagtail_hooks.py
(+12 files in other folders)
